crates/brioche-macro/tests/ui/fail_manual_impl.stderr
error[E0277]: the trait bound `EvilState: Clone` is not satisfied
 --> tests/ui/fail_manual_impl.rs:5:31
  |
5 | impl BriocheExtensionType for EvilState {
  |                               ^^^^^^^^^ the trait `Clone` is not implemented for `EvilState`
  |
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType: __private::Sealed + Any + Send + Sync + Clone {
  |                                                                         ^^^^^ required by this bound in `BriocheExtensionType`
help: consider annotating `EvilState` with `#[derive(Clone)]`
  |
3 + #[derive(Clone)]
4 | pub struct EvilState;
  |

error[E0277]: the trait bound `EvilState: brioche_core::extension::__private::Sealed` is not satisfied
 --> tests/ui/fail_manual_impl.rs:5:31
  |
5 | impl BriocheExtensionType for EvilState {
  |                               ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `brioche_core::extension::__private::Sealed` is not implemented for `EvilState`
 --> tests/ui/fail_manual_impl.rs:3:1
  |
3 | pub struct EvilState;
  | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `BriocheExtensionType`
 --> $WORKSPACE/crates/brioche-core/src/extension.rs
  |
  | pub trait BriocheExtensionType: __private::Sealed + Any + Send + Sync + Clone {
  |                                 ^^^^^^^^^^^^^^^^^ required by this bound in `BriocheExtensionType`
